.kubernetes/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: file-storage-service-backend
  labels:
    app: file-storage-service-backend
  namespace: smkz-for-work
spec:
  replicas: 1
  selector:
    matchLabels:
      app: file-storage-service-backend
  template:
    metadata:
      labels:
        app: file-storage-service-backend
    spec:
      containers:
        - name: file-storage-service-backend
          image: $secrets.REGISTRY_URL/file-storage-service-backend:latest
          resources:
            requests:
              memory: 512Mi
              cpu: 250m
            limits:
              memory: 512Mi
              cpu: 250m
          ports:
            - containerPort: 80
              protocol: TCP
---
# service.yaml
apiVersion: v1
kind: Service
metadata:
  name: file-storage-service-backend
  namespace: smkz-for-work
spec:
  type: ClusterIP
  selector:
    app: file-storage-service-backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
